# slice_math

./: Cargo.toml  README.md
src/: fft.rs  lib.rs  plot.rs  slice_math_.rs  util.rs
src/future/: mod.rs
src/ops/: conj_assign.rs  frac_rotate.rs  into_matrix.rs  mod.rs  recip_assign.rs  trim_zeros.rs
src/ops/poly/: derivate_polynomial.rs  integrate_polynomial.rs  mod.rs  poly_eval.rs  poly_fit.rs  poly_roots.rs
src/ops/poly_signal/: cconv.rs  conv.rs  deconv.rs  detrend.rs  mod.rs
src/ops/signal/: dct.rs  dst.rs  dtft.rs  fft.rs  fht.rs  fwht.rs  mod.rs
