[package]
name = "slice_math"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A selection of useful math operations on slices"
repository = "https://github.com/sigurd4/slice_math"
keywords = ["slice", "util", "math", "ops"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddef = "0.2.2"
slice_ops = {version = "0.1.5", features = ["std"]}
num = "0.4.1"

#[dev-dependencies]
#plotters = "0.3.5"
#linspace = "0.1.1"
#array__ops = "0.1.9"
#rustfft = "6.2.0"