[package]
name = "slice_math"
version = "0.1.31"
edition = "2021"
license = "MIT"
keywords = ["slice", "util", "math", "ops"]
description = "A selection of useful math operations on slices"
repository = "https://github.com/sigurd4/slice_math"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ndarray"]
ndarray = ["dep:ndarray", "dep:ndarray-linalg"]

[dependencies]
moddef = "0.2.6"
slice_ops = {version = "1.0.6", features = ["alloc"]}
num = "0.4.3"
ndarray = {version = "0.16.1", optional = true}
ndarray-linalg = {version = "0.16.0", optional = true, features = ["intel-mkl"]}

[dev-dependencies]
plotters = "0.3.7"
#linspace = "0.1.1"
#array__ops = "0.1.9"
rustfft = "6.2.0"